# pmo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  Makefile  README.md  pmo.py  pyproject.toml
apps/pwa/: README.md  index.html  package.json  pmo.db  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/pwa/public/: manifest.webmanifest
apps/pwa/src/: App.tsx  RoleContext.tsx  index.css  main.tsx  types.ts
apps/pwa/src/api/: client.ts  pmo.ts
apps/pwa/src/components/: ShellLayout.tsx
apps/pwa/src/hooks/: useBusinessUnits.ts  useProjects.ts
apps/pwa/src/views/: DashboardRouter.tsx  FinanceManagerDashboard.tsx  GeneralManagerDashboard.tsx  NotFoundView.tsx  ProjectManagerDashboard.tsx  RoleAwareDashboard.tsx
src/pmo/: cli.py  db.py  models.py  sample_data.py
src/pmo/api/: __init__.py  admin.py  app.py  dependencies.py  routers.py  schemas.py
tests/: conftest.py  data.xlsx  test_api.py  test_cluster.py  test_pmo.py  test_xlsx.py
