[project]
name = "pmo"
version = "0.1.0"
description = "An sqlalchemy schema for a project mgmt system."
authors = [{ name = "Shakeeb Alireza", email = "sa@me.org" }]
dependencies = ["sqlalchemy", "graphviz"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pmo"]

[tool.pytest.ini_options]
pythonpath = ["src"]
