[project]
name = "pmo"
version = "0.1.0"
description = "An sqlalchemy schema for a project mgmt system."
authors = [{ name = "shakfu", email = "sa@me.org" }]
dependencies = [
    "sqlalchemy",
    "graphviz",
    "openpyxl>=3.1.5",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqladmin>=0.16.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pmo"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
